# openpacs

./: .gitignore  .vimrc  CMakeLists.txt  LICENSE  README.md  dcmtk-3.6.1_20150629  fmjpeg2koj
apps/: .anjuta_sym_db.db  CMakeLists.txt  openpacs.cc  runpacs.sh
config/: dcmqrscp.cfg  log2file.cfg  openpacssrv.cfg  runpacs.sh
db/: metadata.backup
dcmtk-3.6.1_20150629/: VERSION
dcmtk-3.6.1_20150629/CMake/: dcmtkPrepare.cmake
dcmtk-3.6.1_20150629/config/include/dcmtk/config/: osconfig.h
dcmtk-3.6.1_20150629/doxygen/: htmldocs.cfg  manpages.cfg
include/dcmtk/dcmqrdb/: CMakeLists.txt  dcmdefines.h  dcmqrcbs.h  dcmqrcnf.h  dcmqrdba.h  dcmqridx.h  dcmqrsrv.h
include/dcmtk/dcmqrdbx/: CMakeLists.txt  dcmqrdbq.h
libsrc/: CMakeLists.txt  Makefile.in  dcmqrcbg.cc  dcmqrcbm.cc  dcmqrcbs.cc  dcmqrcnf.cc  dcmqrdbi.cc  dcmqrdbq.cc  dcmqropt.cc  dcmqrsrv.cc  dcmqrtis.cc
